--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
             <section class="featured">
                 <div class="featured-card f-c-1">
-                    <img src="\buddha.jpg" alt="">
+                    <img src="buddha.jpg" alt="">
                     <div class="featured-card-info">
                         <div class="featured-heading">Travel</div>
                         <div class="featured-info">Tibet Travel Tips Before You Travel To Nepal</div>
